@@ -56,6 +56,7 @@ define( function( require ) {
   // constants
   var NUMBER_OF_NODES = 150;
   var ATOM_OPTIONS = BCEConstants.ATOM_OPTIONS;
+  var MOLECULE_OPTIONS = { atomOptions: BCEConstants.ATOM_OPTIONS };
 
   // nodes used in reward, indexed by game level
   var NODES = [
@@ -74,41 +75,41 @@ define( function( require ) {
 
     // level 2: molecules
     [
-      new CNode( ATOM_OPTIONS ),
-      new C2H2Node( ATOM_OPTIONS ),
-      new C2H4Node( ATOM_OPTIONS ),
-      new C2H5ClNode( ATOM_OPTIONS ),
-      new C2H5OHNode( ATOM_OPTIONS ),
-      new C2H6Node( ATOM_OPTIONS ),
-      new CH2ONode( ATOM_OPTIONS ),
-      new CH3OHNode( ATOM_OPTIONS ),
-      new CH4Node( ATOM_OPTIONS ),
-      new Cl2Node( ATOM_OPTIONS ),
-      new CONode( ATOM_OPTIONS ),
-      new CO2Node( ATOM_OPTIONS ),
-      new CS2Node( ATOM_OPTIONS ),
-      new F2Node( ATOM_OPTIONS ),
-      new CONode( ATOM_OPTIONS ),
-      new H2Node( ATOM_OPTIONS ),
-      new H2ONode( ATOM_OPTIONS ),
-      new H2SNode( ATOM_OPTIONS ),
-      new HClNode( ATOM_OPTIONS ),
-      new HFNode( ATOM_OPTIONS ),
-      new N2Node( ATOM_OPTIONS ),
-      new N2ONode( ATOM_OPTIONS ),
-      new NH3Node( ATOM_OPTIONS ),
-      new NONode( ATOM_OPTIONS ),
-      new NO2Node( ATOM_OPTIONS ),
-      new O2Node( ATOM_OPTIONS ),
-      new OF2Node( ATOM_OPTIONS ),
-      new P4Node( ATOM_OPTIONS ),
-      new PCl3Node( ATOM_OPTIONS ),
-      new PCl5Node( ATOM_OPTIONS ),
-      new PH3Node( ATOM_OPTIONS ),
-      new PF3Node( ATOM_OPTIONS ),
-      new SNode( ATOM_OPTIONS ),
-      new SO2Node( ATOM_OPTIONS ),
-      new SO3Node( ATOM_OPTIONS )
+      new CNode( MOLECULE_OPTIONS ),
+      new C2H2Node( MOLECULE_OPTIONS ),
+      new C2H4Node( MOLECULE_OPTIONS ),
+      new C2H5ClNode( MOLECULE_OPTIONS ),
+      new C2H5OHNode( MOLECULE_OPTIONS ),
+      new C2H6Node( MOLECULE_OPTIONS ),
+      new CH2ONode( MOLECULE_OPTIONS ),
+      new CH3OHNode( MOLECULE_OPTIONS ),
+      new CH4Node( MOLECULE_OPTIONS ),
+      new Cl2Node( MOLECULE_OPTIONS ),
+      new CONode( MOLECULE_OPTIONS ),
+      new CO2Node( MOLECULE_OPTIONS ),
+      new CS2Node( MOLECULE_OPTIONS ),
+      new F2Node( MOLECULE_OPTIONS ),
+      new CONode( MOLECULE_OPTIONS ),
+      new H2Node( MOLECULE_OPTIONS ),
+      new H2ONode( MOLECULE_OPTIONS ),
+      new H2SNode( MOLECULE_OPTIONS ),
+      new HClNode( MOLECULE_OPTIONS ),
+      new HFNode( MOLECULE_OPTIONS ),
+      new N2Node( MOLECULE_OPTIONS ),
+      new N2ONode( MOLECULE_OPTIONS ),
+      new NH3Node( MOLECULE_OPTIONS ),
+      new NONode( MOLECULE_OPTIONS ),
+      new NO2Node( MOLECULE_OPTIONS ),
+      new O2Node( MOLECULE_OPTIONS ),
+      new OF2Node( MOLECULE_OPTIONS ),
+      new P4Node( MOLECULE_OPTIONS ),
+      new PCl3Node( MOLECULE_OPTIONS ),
+      new PCl5Node( MOLECULE_OPTIONS ),
+      new PH3Node( MOLECULE_OPTIONS ),
+      new PF3Node( MOLECULE_OPTIONS ),
+      new SNode( MOLECULE_OPTIONS ),
+      new SO2Node( MOLECULE_OPTIONS ),
+      new SO3Node( MOLECULE_OPTIONS )
     ],
 
     // level 3: faces and stars
