@@ -1,3 +1,4 @@
+11/6/14 fix how options are provided to NITROGLYCERIN molecule nodes
 11/4/14 port doc/model.txt
 10/2014 use new LevelSelectionButton in Game
 10/1/14 use new JSdoc conventions for @param
